--- a/Mileblog/templates/single_blog.html
+++ b/Mileblog/templates/single_blog.html
@@ -22,6 +22,10 @@
     <link rel="stylesheet" href="{% static 'css/flaticon.css'%}">
     <link rel="stylesheet" href="{% static 'css/icomoon.css'%}">
     <link rel="stylesheet" href="{% static 'css/style.css'%}">
+	   
+
+<script data-ad-client="ca-pub-1687619327980927" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	  
   </head>
   <body>
     
